--- a/final_project/index.html
+++ b/final_project/index.html
@@ -4,7 +4,7 @@
 	<a href="/upload/">upload</a>
 	<h1>Friends</h1>
 	<table border="3" style="width: 18%;">
-		{% for uid, name in friend_info %}  
+		{% for uid, name in friend_attributes %}  
         <tr>
         	<td><a href="/profile/{{uid}}/">{{name}}</a></td>
         </tr>
