--- a/final_project/friends.html
+++ b/final_project/friends.html
@@ -10,17 +10,17 @@
 			<td>uid</td>
 			<td>name</td>
 			<td>birthday_date</td>
-			<td>pic</td>
+			<td>sex</td>
 		</tr>
 
-		{% for uid, name, birthday_date, pic%}
+		{% for uid, name, birthday_date, sex%}
 
 		<tr>
 
 			<td>{{uid}}</td>
 			<td>{{name}}</td>
 			<td>{{birthday_date}}</td>
-			<td>{{pic}}</td>
+			<td>{{sex}}</td>
 		</tr>
 
 		{% endfor %}
